<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".DetailActivity">


    <include
        layout="@layout/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/eventNameID"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/event_name"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eventDateID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="10dp"
            android:text="@string/date"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eventLocationID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="10dp"
            android:text="@string/location"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eventTimeID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="10dp"
            android:text="@string/time"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:text="@string/description"
            android:textSize="15dp"
            android:textStyle="normal" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom" />

    </RelativeLayout>

</LinearLayout>
